ola-parser/src/testdata/syntaxTests/natspec/invalid/docstring_parameter.sol
contract C {
    /**
     * @param 5value a value parameter
     * @param _ a value parameter
     */
    fn f(u256 _5value, u256 _value, u256 value) internal {
    }
}
// ----
// DocstringParsingError 3881: (17-101): Documented parameter "" not found in the parameter list of the fn.
// DocstringParsingError 3881: (17-101): Documented parameter "_" not found in the parameter list of the fn.
